--- a/mychatappv4client/src/styles/Users.module.css
+++ b/mychatappv4client/src/styles/Users.module.css
@@ -5,7 +5,7 @@
     /* -ms-overflow-style: none;  IE and Edge // dont work lol// */ 
     /* scrollbar-width: none;  Firefox */
     /* height: 100vh; */
-    overscroll-behavior: none;
+    /* overscroll-behavior: none; */
         /* overscroll-behavior: contain; prevents scroll chaining  */
     /* -webkit-overflow-scrolling: auto; disables iOS momentum bounce */
 }
@@ -65,7 +65,6 @@ h2
 {
     font-family: Segoe UI Symbol;
     font-size: 2rem;
-    /* border: 1px solid purple; */
     background: none;
     margin-left: 2rem;
     display: flex;
@@ -74,23 +73,25 @@ h2
 }
 .options
 {
-    /* border: 1px solid pink; */
     width: 3rem;
-    height: 3rem;
+    border-radius: 0.5rem;
     margin-left: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    background-color: #1708c1;
+    transition: 0.5s;
 }
 .options:hover
 {
-    
+    transform: scale(1.05);
+    transition: transform 0.2s ease;
+    cursor: pointer;
+    background: #190e97;
 }
 .userContainer
 {
     display: flex;
-    /* border: 1px solid rgb(21, 31, 142); */
     margin: 0;
     padding: 1.2rem;
     cursor: pointer;
@@ -113,7 +114,6 @@ h2
 }
 .profilePic
 {
-    /* border: 1px solid blue; */
     border-radius: 50px;
     margin-left: 1rem;
     width:4rem;
@@ -127,6 +127,7 @@ h2
     height: 4rem;
     border-radius: 50px;
     /* margin-left: 1rem; */
+    transition: 0.5s;
 }
 .profilePic img:hover
 {
@@ -135,11 +136,16 @@ h2
 }
 .profileName
 {
-    /* border: 1px solid green; */
     margin-left: 1rem;
     padding: 0.5rem;
     font-family: Ink Free;
     font-size: 1.5rem;
     font-weight: 800;
     background: none;
+    transition: 0.5s;
+}
+.profileName:hover
+{
+    transform: scale(1.1);
+    transition: transform 0.5s ease;
 }
